--- a/index.html
+++ b/index.html
@@ -11,28 +11,36 @@
       href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
+      integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <title>COLORS</title>
   </head>
   <body>
     <div class="col">
       <h3>First</h3>
-      <button>LOCKED</button>
+      <button>i class="fa-solid fa-lock-open" data-type="lock"></i></button>
     </div>
     <div class="col">
       <h3>Second</h3>
-      <button>LOCKED</button>
+      <button>i class="fa-solid fa-lock-open" data-type="lock"></i></button>
     </div>
     <div class="col">
       <h3>Third</h3>
-      <button>LOCKED</button>
+      <button>i class="fa-solid fa-lock-open" data-type="lock"></i></button>
     </div>
     <div class="col">
       <h3>Fourth</h3>
-      <button>LOCKED</button>
+      <button>i class="fa-solid fa-lock-open" data-type="lock"></i></button>
     </div>
     <div class="col">
       <h3>Fifth</h3>
-      <button>LOCKED</button>
+      <button>i class="fa-solid fa-lock-open" data-type="lock"></i></button>
     </div>
+    <script src="app.js"></script>
   </body>
 </html>
