app.js - generation of colors (random), copy color hex

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -18,28 +18,44 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/chroma-js/2.4.2/chroma.min.js"
+      integrity="sha512-zInFF17qBFVvvvFpIfeBzo7Tj7+rQxLeTJDmbxjBz5/zIr89YVbTNelNhdTT+/DCrxoVzBeUPVFJsczKbB7sew=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
     <title>COLORS</title>
   </head>
   <body>
     <div class="col">
-      <h3>First</h3>
-      <button>i class="fa-solid fa-lock-open" data-type="lock"></i></button>
+      <h3 data-type="copy">First</h3>
+      <button data-type="lock">
+        <i class="fa-solid fa-lock-open" data-type="lock"></i>
+      </button>
     </div>
     <div class="col">
-      <h3>Second</h3>
-      <button>i class="fa-solid fa-lock-open" data-type="lock"></i></button>
+      <h3 data-type="copy">Second</h3>
+      <button data-type="lock">
+        <i class="fa-solid fa-lock-open" data-type="lock"></i>
+      </button>
     </div>
     <div class="col">
-      <h3>Third</h3>
-      <button>i class="fa-solid fa-lock-open" data-type="lock"></i></button>
+      <h3 data-type="copy">Third</h3>
+      <button data-type="lock">
+        <i class="fa-solid fa-lock-open" data-type="lock"></i>
+      </button>
     </div>
     <div class="col">
-      <h3>Fourth</h3>
-      <button>i class="fa-solid fa-lock-open" data-type="lock"></i></button>
+      <h3 data-type="copy">Fourth</h3>
+      <button data-type="lock">
+        <i class="fa-solid fa-lock-open" data-type="lock"></i>
+      </button>
     </div>
     <div class="col">
-      <h3>Fifth</h3>
-      <button>i class="fa-solid fa-lock-open" data-type="lock"></i></button>
+      <h3 data-type="copy">Fifth</h3>
+      <button data-type="lock">
+        <i class="fa-solid fa-lock-open" data-type="lock"></i>
+      </button>
     </div>
     <script src="app.js"></script>
   </body>
